<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:padding="5dp"
        android:paddingTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <com.absket.in.CustomFonts.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Terms &amp; Conditions"/>

        <View
            android:layout_width="wrap_content"
            android:background="#000"
            android:layout_marginTop="5dp"
            android:layout_height="1dp"/>

        <com.absket.in.CustomFonts.MyTextViewBold
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:text="@string/terms_text" />

        <com.absket.in.CustomFonts.MyTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_text_two" />

        <com.absket.in.CustomFonts.MyTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_text_three" />

        <com.absket.in.CustomFonts.MyTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_text_four" />

        <com.absket.in.CustomFonts.MyTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_text_five" />
    </LinearLayout>


    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />


    <ImageView
        android:id="@+id/img_close"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:src="@drawable/close" />
</LinearLayout>